# cmake-interface_lib_question

./: CMakeLists.txt  README.md
inc/: platform.h  prod.h
platform2/: platform.h
src/: main.c
